--- a/src/style.css
+++ b/src/style.css
@@ -12,18 +12,16 @@
     cursor: pointer;
 }
 
+
 .dropdown-content {
-    display: none;
+    opacity: 0;
+    visibility: hidden;
     position: absolute;
-    /* background-color: #f1f1f1; */
-    /* min-width: 200px; */
-    /* box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2); */
     z-index: 1;
-    /* width: -webkit-fit-content; */
-    /* width: -moz-fit-content; */
     width: fit-content;
     white-space: nowrap;
     background-color: white;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
 .dropdown-content li {
@@ -39,7 +37,8 @@
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+    opacity: 1;
+    visibility: visible;
 }
 
 .dropdown:hover .dropbtn {
